@@ -176,6 +176,9 @@ Release 0.23.5 - UNRELEASED
     YARN-159. RM web ui applications page should be sorted to display last app
     first (tgraves via bobby)
 
+    YARN-166. capacity scheduler doesn't allow capacity < 1.0 (tgraves via
+    bobby)
+
 Release 0.23.4 - UNRELEASED
 
   INCOMPATIBLE CHANGES
